--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "show",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "public/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp dev",
+    "production": "gulp production"
   },
-  "keywords": [],
+  "keywords": ["html template", "html example", "css js example", "test project", "simple template"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
